<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
		android:title="@string/pref_category_general">
		<EditTextPreference
                android:name="@string/pref_name_number_results"
                android:summary="@string/pref_summary_number_results"
                android:defaultValue="10"
                android:title="@string/pref_title_number_results"
                android:key="number_results"
                android:inputType="number">
        </EditTextPreference>
        <EditTextPreference
                android:name="@string/pref_name_download_days"
                android:summary="@string/pref_summary_download_days"
                android:defaultValue="7"
                android:title="@string/pref_title_download_days"
                android:key="download_days"
                android:inputType="number">
        </EditTextPreference>
        <EditTextPreference
                android:name="@string/pref_name_download_hours"
                android:summary="@string/pref_summary_download_hours"
                android:defaultValue="24"
                android:title="@string/pref_title_download_hours"
                android:key="download_hours"
                android:inputType="numberDecimal">
        </EditTextPreference>
        <ListPreference
                android:title="@string/pref_title_file_size_type"
                android:summary="@string/pref_summary_file_size_type"
                android:key="file_size_type"
                android:defaultValue="3">
        </ListPreference>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_category_title_download_speed">
		<EditTextPreference
                android:name="@string/pref_name_average_min_down_speed"
                android:summary="@string/pref_summary_average_min_down_speed"
                android:defaultValue="10"
                android:title="@string/pref_title_average_min_down_speed"
                android:key="average_min_down_speed"
                android:inputType="numberDecimal">
        </EditTextPreference>
        <ListPreference
                android:title="@string/pref_title_average_min_down_speed_type"
                android:summary="@string/pref_summary_average_min_down_speed_type"
                android:key="average_min_down_speed_type"
                android:defaultValue="2">
        </ListPreference>
        <EditTextPreference
                android:name="@string/pref_name_average_max_down_speed"
                android:summary="@string/pref_summary_average_max_down_speed"
                android:defaultValue="100"
                android:title="@string/pref_title_average_max_down_speed"
                android:key="average_max_down_speed"
                android:inputType="numberDecimal">
        </EditTextPreference>
        <ListPreference
                android:title="@string/pref_title_average_max_down_speed_type"
                android:summary="@string/pref_summary_average_max_down_speed_type"
                android:key="average_max_down_speed_type"
                android:defaultValue="2">
        </ListPreference>
    </PreferenceCategory>

	<PreferenceCategory
	        android:title="@string/pref_category_title_about">
        <Preference
                android:title="@string/pref_title_contact"
                android:summary="@string/pref_summary_contact"
                android:key="contact" />
	</PreferenceCategory>
</PreferenceScreen>
