<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true">
    <RelativeLayout 
        style="@style/header_wrapper">
	    <TextView
			style="@style/header_title"
			android:id="@+id/tv_header_text"
	   		android:text="@string/app_name">
	   	</TextView>   
	   	<Button
			style="@style/header_settings"
			android:id="@+id/bt_settings"
	  		android:text=" ">
	  	</Button> 
    </RelativeLayout>
	
	<include layout="@xml/xml_2dip_line_blue" />
	
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="none">
	   	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical" 
		    android:descendantFocusability="beforeDescendants"
		    android:focusableInTouchMode="true">
		    
			<TextView
			    style="@style/heading_one"
				android:id="@+id/tv_file_info_heading"
		   		android:text="@string/tv_file_info_heading">
			</TextView>
			<RelativeLayout     
			    style="@style/heading_two_wrapper">
				<TextView
				    style="@style/heading_two"
					android:id="@+id/tv_file_size_title"
			   		android:text="@string/tv_file_size_title"
			   		android:layout_alignParentLeft="true">
				</TextView>
				<Spinner 
				    android:layout_height="wrap_content"
				    android:layout_width="100dip"
				    android:id="@+id/sp_file_size_type"
				    android:layout_alignParentRight="true">
				</Spinner>
				<EditText 
				    android:id="@+id/et_file_size"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:hint="@string/et_file_size_hint"
				    android:layout_toLeftOf="@id/sp_file_size_type"
				    android:layout_toRightOf="@id/tv_file_size_title"
				    android:layout_marginLeft="5dip"
				    android:layout_marginRight="5dip"
				    android:inputType="numberDecimal">
				</EditText>	    
			</RelativeLayout>
			
			<TextView
			    style="@style/heading_one"
				android:id="@+id/tv_download_speed_heading"
		   		android:text="@string/tv_download_speed_heading">
			</TextView>
			
		    <RelativeLayout     
                style="@style/heading_two_wrapper">
		        <TextView
				    style="@style/heading_two"
					android:id="@+id/tv_download_speed_min_title"
			   		android:text="@string/tv_download_speed_min_title">
				</TextView>
				<Spinner 
                    android:layout_height="wrap_content"
                    android:layout_width="100dip"
                    android:id="@+id/sp_min_speed_type"
                    android:layout_alignParentRight="true">
                </Spinner>
				<RelativeLayout
				    android:layout_height="fill_parent"
				    android:layout_width="fill_parent"
				    android:id="@+id/rl_et_speed_min_wrapper"
				    android:layout_toLeftOf="@id/sp_min_speed_type"
				    android:layout_toRightOf="@id/tv_download_speed_min_title">
				    <Button 
				        style="@style/bt_decrease"
				        android:id="@+id/bt_decrease_min">
				    </Button>
  				    <Button 
				        style="@style/bt_increase"
				        android:id="@+id/bt_increase_min">
				    </Button>
				    <EditText
					    android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:id="@+id/et_download_speed_min"
					    android:hint="@string/et_download_speed_min_hint"
					    android:inputType="numberDecimal"
					    android:layout_toLeftOf="@id/bt_increase_min"
					    android:layout_toRightOf="@id/bt_decrease_min">
					</EditText>
				</RelativeLayout>
		    </RelativeLayout>
		    
            <RelativeLayout     
                style="@style/heading_two_wrapper">
		       	<TextView
				    style="@style/heading_two"
					android:id="@+id/tv_download_speed_max_title"
			   		android:text="@string/tv_download_speed_max_title">
				</TextView>
				<Spinner 
                    android:layout_height="wrap_content"
                    android:layout_width="100dip"
                    android:id="@+id/sp_max_speed_type"
                    android:layout_alignParentRight="true">
                </Spinner>
				<RelativeLayout
				    android:layout_height="fill_parent"
				    android:layout_width="fill_parent"
				    android:id="@+id/rl_et_speed_max_wrapper"
                    android:layout_toLeftOf="@id/sp_max_speed_type"
                    android:layout_toRightOf="@id/tv_download_speed_max_title">
				    <Button 
				        style="@style/bt_decrease"
				        android:id="@+id/bt_decrease_max">
				    </Button>
	  				    <Button 
				        style="@style/bt_increase"
				        android:id="@+id/bt_increase_max">
				    </Button>
				    <EditText
					    android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:id="@+id/et_download_speed_max"
					    android:hint="@string/et_download_speed_max_hint"
					    android:inputType="numberDecimal"
					    android:layout_toLeftOf="@id/bt_increase_max"
					    android:layout_toRightOf="@id/bt_decrease_max">
					</EditText>
				</RelativeLayout>
		    </RelativeLayout>
		    
			<TextView
                style="@style/heading_one"
                android:id="@+id/tv_download_time_heading"
                android:text="@string/tv_download_time_heading">
            </TextView>
            
            <RelativeLayout     
                style="@style/heading_two_wrapper">
		        <TextView
				    style="@style/heading_two"
					android:id="@+id/tv_download_time_days_title"
			   		android:text="@string/tv_download_time_days_title">
				</TextView>
				<TextView
                    style="@style/heading_two"
                    android:id="@+id/tv_download_time_days_extra"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="true"
                    android:text="a week">
                </TextView>
				<RelativeLayout
				    android:layout_height="fill_parent"
				    android:layout_width="fill_parent"
				    android:id="@+id/rl_et_time_days_wrapper"
                    android:layout_toLeftOf="@id/tv_download_time_days_extra"
                    android:layout_toRightOf="@id/tv_download_time_days_title">
				    <Button 
				        style="@style/bt_decrease"
				        android:id="@+id/bt_decrease_days">
				    </Button>
	  				    <Button 
				        style="@style/bt_increase"
				        android:id="@+id/bt_increase_days">
				    </Button>
				    <EditText
					    android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:id="@+id/et_download_time_days"
					    android:hint="@string/et_download_time_days_hint"
					    android:inputType="numberDecimal"
					    android:layout_toLeftOf="@id/bt_increase_days"
					    android:layout_toRightOf="@id/bt_decrease_days">
					</EditText>
				</RelativeLayout>
		    </RelativeLayout>
		    
            <RelativeLayout     
                style="@style/heading_two_wrapper">
		       	<TextView
				    style="@style/heading_two"
					android:id="@+id/tv_download_time_hours_title"
			   		android:text="@string/tv_download_time_hours_title">
				</TextView>
				<TextView
                    style="@style/heading_two"
                    android:id="@+id/tv_download_time_hours_extra"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="true"
                    android:text="a day">
                </TextView>
				<RelativeLayout
				    android:layout_height="fill_parent"
				    android:layout_width="fill_parent"
				    android:id="@+id/rl_et_time_hours_wrapper"
				    android:layout_toLeftOf="@id/tv_download_time_hours_extra"
				    android:layout_toRightOf="@id/tv_download_time_hours_title">
				    <Button 
				        style="@style/bt_decrease"
				        android:id="@+id/bt_decrease_hours">
				    </Button>
	  				<Button 
				        style="@style/bt_increase"
				        android:id="@+id/bt_increase_hours">
				    </Button>
				    <EditText
					    android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:id="@+id/et_download_time_hours"
					    android:hint="@string/et_download_time_hours_hint"
					    android:inputType="numberDecimal"
					    android:layout_toLeftOf="@id/bt_increase_hours"
					    android:layout_toRightOf="@id/bt_decrease_hours">
					</EditText>
				</RelativeLayout>
		    </RelativeLayout>
		    
			<TextView
			    style="@style/heading_one"
				android:id="@+id/tv_download_results_heading"
		   		android:text="@string/tv_download_results_heading"
		   		android:layout_marginBottom="0dip">
			</TextView>
			
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="5dip">
			    <TextView
				    style="@style/heading_two"
					android:id="@+id/tv_download_speed_title"
			   		android:text="@string/tv_download_speed_title"
			   		android:layout_marginTop="0dip">
				</TextView>
				<TextView
				    style="@style/heading_two"
					android:id="@+id/tv_download_time_title"
			   		android:text="@string/tv_download_time_title"
			   		android:layout_alignParentLeft="false"
			   		android:layout_alignParentRight="true"
			   		android:layout_marginRight="5dip"
			   		android:layout_marginLeft="0dip"
			   		android:layout_marginTop="0dip">
				</TextView>
			</RelativeLayout>
			
			<include layout="@xml/xml_1dip_line" />
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/ll_results"
		        android:orientation="vertical">
		    </LinearLayout>
		    
		    <TextView
                style="@style/heading_one"
                android:id="@+id/tv_results_max_heading"
                android:text="@string/tv_results_max_heading"
                android:layout_marginBottom="0dip">
            </TextView>
            
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip">
                <TextView
                    style="@style/heading_two"
                    android:id="@+id/tv_max_time_title"
                    android:text="@string/tv_max_time_title"
                    android:layout_marginTop="0dip">
                </TextView>
                <TextView
                    style="@style/heading_two"
                    android:id="@+id/tv_max_size_title"
                    android:text="@string/tv_max_size_title"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dip"
                    android:layout_marginLeft="0dip"
                    android:layout_marginTop="0dip">
                </TextView>
            </RelativeLayout>
            
            <include layout="@xml/xml_1dip_line" />
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_max_results"
                android:orientation="vertical">
            </LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
